# Linera-Intents

./: .gitignore  Cargo.toml  README.md  chain.json  compose.yaml  genesis.extracted.json  l_iwave6.md  prices.series.json  product.md  relayer_keystore.json  run.bash
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/prices/: route.ts
frontend/app/api/tokens/: route.ts
frontend/app/components/: top-bar.tsx
frontend/app/explore/: page.tsx
frontend/app/explore/[tokenAppId]/: SvgCandleChart.tsx  page.tsx
frontend/app/faucet/: page.tsx
intents-chain/: Cargo.toml
intents-chain/faucet/: Cargo.toml
intents-chain/faucet/src/: contract.rs  lib.rs  service.rs  state.rs
intents-chain/fungible_token/: Cargo.toml
intents-chain/fungible_token/src/: contract.rs  lib.rs  service.rs  state.rs
intents-chain/matching_engine/: Cargo.toml
intents-chain/matching_engine/src/: contract.rs  lib.rs  service.rs  state.rs
intents-chain/shared_types/: Cargo.toml
intents-chain/shared_types/src/: lib.rs
intents-chain/token_factory/: Cargo.toml
intents-chain/token_factory/src/: contract.rs  lib.rs  service.rs  state.rs
linera-storage/table_linera/: IDENTITY  LOG  LOG.old.1769987139435812  LOG.old.1769987139794031  LOG.old.1769987245192743  LOG.old.1769987245554762  MANIFEST-000021
scripts/: cli-guide.md  cli.sh
scripts/extract_genesis_from_wallet_db/: Cargo.toml  README.md
scripts/extract_genesis_from_wallet_db/src/: main.rs
scripts/gen_keypair/: Cargo.toml
scripts/gen_keypair/src/: main.rs
scripts/sign_create_token/: Cargo.toml
scripts/sign_create_token/src/: main.rs
wallet.db/table_linera/: IDENTITY  LOG  LOG.old.1769995912573364  LOG.old.1769995912673649  LOG.old.1769995916867354  LOG.old.1769995917281618  LOG.old.1769995999340658  LOG.old.1769995999985868  MANIFEST-000047  OPTIONS-000042
