[package]
name = "token_factory"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "=7.0.17", default-features = false }
async-graphql-value = { version = "=7.0.17", default-features = false }
hex = "0.4"
linera-base = "=0.15.10"
linera-sdk = "=0.15.8"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
shared_types = { path = "../shared_types" }
matching_engine = { path = "../matching_engine" }
fungible_token = { path = "../fungible_token" }

[[bin]]
name = "token_factory_contract"
path = "src/contract.rs"

[[bin]]
name = "token_factory_service"
path = "src/service.rs"
